chore: comments and some sonar suggested fix